docs(08): create phase plan
Phase 08: Report Generation & Data
- 4 plans in 2 waves
- Wave 1: PDF export, data export (parallel)
- Wave 2: CSV import, recurring transactions (parallel)
- Ready for execution

--- a/.planning/phases/08-report-generation-data/08-04-PLAN.md
+++ b/.planning/phases/08-report-generation-data/08-04-PLAN.md
@@ -2,8 +2,8 @@
 phase: 08-report-generation-data
 plan: 04
 type: execute
-wave: 3
-depends_on: [08-03]
+wave: 2
+depends_on: []
 files_modified:
   - package.json
   - src/lib/server/db/schema.ts
